# riglink

./: .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  LICENSE  Makefile  README.md  llms.txt  west.yml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  zephyr.yml
docs/handoffs/: 2026-05-11-native-sim-docker.md  2026-05-12-interpret-return-shape.md  2026-05-29-shell-backend-integration-tests.md
docs/superpowers/plans/: 2026-05-11-riglink.md
docs/superpowers/specs/: 2026-05-11-riglink-design.md  2026-05-12-ret-return-shape.md
include/: riglink.h  riglink_pp.h
plugins/riglink-integration/: SKILL.md
plugins/riglink-integration/.claude-plugin/: plugin.json
plugins/riglink-integration/assets/: prj.conf.snippet  rig_shims_template.c  test_template.py
plugins/riglink-integration/references/: reference.md
python/: pyproject.toml
python/riglink/: __init__.py  _wire.py  cli.py  device.py  exceptions.py  native_sim.py  pytest_plugin.py  transport.py
python/tests/: _fakedev.py  test_cli.py  test_device.py  test_diagnostics.py  test_plugin.py  test_transport.py  test_wire.py
samples/echo/: CMakeLists.txt  README.md  prj.conf  sample.yaml
samples/echo/src/: main.c
samples/echo_shell/: CMakeLists.txt  README.md  prj.conf  sample.yaml
scripts/: native-sim-test.sh
src/: riglink_cmd.c  riglink_core.c  riglink_internal.h  riglink_io.c  riglink_proto.c
tests/: riglink_test.h  test_cmd.c  test_e2e.c  test_io.c  test_macros.c  test_pp.c  test_proto.c  test_regression.c  test_smoke.c
tests/integration/: conftest.py  test_echo.py  test_echo_shell.py
zephyr/: Kconfig  module.yml  shell_backend.c  uart_irq_rx.c
(+5 files in other folders)
