[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "riglink"
version = "0.1.0"
description = "Host-driven firmware testing over serial — the host half of the riglink harness"
readme = "../README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Paul Buckley" }]
dependencies = ["pyserial>=3.5"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
rig = "riglink.cli:main"

[project.entry-points.pytest11]
riglink = "riglink.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["riglink"]

[tool.pytest.ini_options]
testpaths = ["tests"]
